# ecnn4klm

./: LICENSE  README.md  pyproject.toml  setup.cfg
data/square/: data.pt  learn.py  param.cpt
data/triangle/: learn.py  param.cpt
ecnn4klm/: model.py
ecnn4klm/util/: spin_generator.py
notebook/: ecnn_test.ipynb
src/ecnn4klm/: model.py
src/ecnn4klm/util/: exact.py  visualize.py
