[build-system]
requires = ["setuptools", "wheel"]


[project]
name = "ecnn4klm"
description = "My package description"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Yu Miyazaki", email = "yumiyazaki@g.ecc.u-tokyo.ac.jp"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "==3.*"
dependencies = [
    "torch>=1.8.0",
    "e3nn",
    "numpy",
    "scipy",
    "matplotlib",
]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "src.ecnn4klm.__version__"}

