[metadata]
name = ecnn4klm
version = attr: ecnn4klm.__version__
license = file: LICENSE
description = equivariant convolutional neural network for kondo lattice model
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
[options]
package_dir=
    =src
packages = find:
install_requires =
    torch>=1.8.0
    e3nn>=0.4.3
    numpy 
    scipy
    matplotlib
    
[options.packages.find]
where=src