[metadata]
name = ecnn4klm
version = attr: src.ecnn4klm.__version__
license = file: LICENSE
description = equivariant convolutional neural network for kondo lattice model
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
[options]
package_dir=
    =src

# install_requires =
#     torch>=1.8.0
#     e3nn
#     numpy 
#     scipy
#     matplotlib
    
